styles/Home.module.css
/* Mobile home */
.Mobcontainer {
  display: none;
}

.mobMobileContainer {
  display: none;
}

@media screen and (max-width: 900px) {
  .Mobcontainer {
    display: block;
    background-image: radial-gradient(rgb(214, 214, 214) 1px, transparent 0);
    background-size: 30px 30px;
  }

  .mobMobileContainer {
    display: block;
    background-image: radial-gradient(rgba(214, 214, 214, 0.427) 1px, transparent 0);
    background-size: 30px 30px;
    margin-bottom: 20px;
  }

  .blogBody {
    display: none !important;
  }

  .container {
    display: none !important;
  }
}

.Mobcontainer {
  height: 100vh;
  /* overflow: hidden; */
}

.Mobheader {
  margin-left: 20px;
  margin-right: 20px;
  display: flex;
  /* margin-top: 18px; */
  justify-content: space-between;
}

.mobHamburger img {
  margin-top: 18px;
}

.mobHamburger button {
  background: none;
  border: none;
}

.mobLogo img {
  width: 164px;
  margin-top: 18px;
}

.mobAnim {
  height: 30%;
  background: #374151;
  margin-top: 18px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: radial-gradient(rgba(255, 255, 255, 0.085) 1px, transparent 0);
  background-size: 30px 30px;
}

.mobCaption {
  text-align: center;
  height: 35%;
  /* background: red; */
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 30px;
}

@media screen and (max-height: 800px) {
  .mobCaption {
    height: 40%;
  }
}

.mobCaption h1 {
  font-size: 34px;
  font-weight: 200;
  line-height: 46px;
  letter-spacing: 1px;
  margin-top: 30px;
  color: #374151;
}

.mobCaption a {
  color: #37BE43;
  font-weight: 600;
  font-size: 16px;
  line-height: 21px;
  border: 2px solid #37BE43;
  border-radius: 8px;
  padding-top: 16px;
  width: 175px;
  height: 38px;
  justify-content: center;
  display: flex;
  text-decoration: none;
}

.mobSocial {
  display: flex;
  justify-content: center;
}

.mobSocialIcon {
  margin-left: 20px;
  margin-right: 20px;
}

.mobFooter {
  justify-content: center;
  display: flex;
  padding-top: 20px;
  color: #888F99;
  font-size: 14px;
}

.mobBlockContainer {
  display: flex;
  /* position: fixed; */
  z-index: 0;
  display: block;
  padding: 10px;
}

.mobBlock {
  position: relative;
  box-sizing: border-box;
  float: left;
  margin: 10px 20px 10px 20px;
  /* outline: 10px solid rgb(55, 65, 81); */
  width: 5px;
  height: 5px;
  /* border-radius: 6px; */
  background: rgb(55, 65, 81);
  /* border: 1px solid rgb(34 197 94 / 75%); */
  opacity: 1;
  /* color:  rgb(34 197 94 / 75%); */
  /* background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="5px" height="5px"> <rect width="5" height="5" style="fill:rgb(255,255,255);stroke-width:1;" /></svg>'); */
  /* background-repeat: no-repeat; */
  /* background-attachment: fixed;
    background-position-x: left; */
  /* content: "hello";
  visibility: visible; */
}

.mobBlock:nth-child(4n+1) {
  animation: wave 4s ease .0s infinite;
}

.mobBlock:nth-child(4n+2) {
  animation: wave 4s ease .4s infinite;
}

.mobBlock:nth-child(4n+3) {
  animation: wave 4s ease .6s infinite;
}

.mobBlock:nth-child(4n+4) {
  animation: wave 4s ease .8s infinite;
  margin-right: 0;
}

@keyframes wave {
  0% {
    top: 10px;
    opacity: 1;
    background: #37BE43;
    backdrop-filter: blur(15px) saturate(3);
    background-size: 35px 35px;
    background-attachment: 10px;
    background-position-x: 12.5px;
    background-position-y: 12.5px;
  }

  50% {
    top: 0px;
    opacity: 1;
    /* backdrop-filter: blur(15px) saturate(3); */
    background: #37BE43;
    background-attachment: 10px;
    background-position-x: 12.5px;
    background-position-y: 12.5px;
  }

  100% {
    top: 10px;
    opacity: 1;
    /* backdrop-filter: blur(15px) saturate(3); */
    background-attachment: 10px;
    background-position-x: 12.5px;
    background-position-y: 12.5px;
    background: #ffffff6a;
  }
}

.mobMenu {
  /* background: rgba(255, 255, 255, 0.153); */
  background: rgba(255, 255, 255, 0.911);
  height: 80vh;
  width: 100%;
  /* opacity: 0.9; */
  /* margin-left: 10%; */
  animation-duration: 0.75s;
  /* animation-name: slidein; */
  position: absolute;
  overflow: hidden;
  z-index: 1000;
  overflow: hidden;
  padding-top: 20px;
  background-image: radial-gradient(rgb(214, 214, 214) 1px, transparent 0);
  background-size: 30px 30px;
}

.mobMenu a {
  padding-left: 30px;
}

@keyframes slidein {
  from {
    margin-left: 100%;
    width: 100%;
  }

  to {
    margin-left: 0%;
    width: 100%;
  }
}

.MobNavItem {
  font-weight: 400;
  font-size: 18px;
  line-height: 44px;
  /* or 244% */

  letter-spacing: 0.01em;

  color: #374151;

  transform: matrix(1, 0.01, 0, 1, 0, 0);

}

.MobNavItem a {
  text-decoration: none;
  color: #374151;
}

a.mobActiveNav {
  color: #37BE43;
  text-decoration: none;
}

.CloseMobNavItem {
  display: flex;
  align-items: center;
  padding-left: 85%;
}

.CloseMobNavItem button {
  padding-right: 20px;
  background: none;
  border: none;
}

/* Desktop Home */

.container {

  overflow: hidden;
  /* background: red; */
  height: 100vh;
  display: flex;
}

.leftContainer {
  /* display: flex; */
  background-image: radial-gradient(rgba(225, 225, 225, 0.688) 2px, transparent 0);
  background-size: 30px 30px;
  width: 50%;
}

.rightContainer {
  width: 50%;
  background: #374151;
  background-image: radial-gradient(rgba(77, 77, 77, 0.618) 2px, transparent 0);
  background-size: 30px 30px;
}

.logo,
.nav {
  height: 10%;
  /* background: green; */
  margin-left: 10%;
  display: flex;
  align-items: center;
}

.nav {
  justify-content: center;
}

.navItems {
  display: flex;
  width: 300px;
  justify-content: space-between;
  align-items: center;
}

.caption,
.animation {
  height: 80%;
  display: flex;
  /* align-items: center; */
  margin-left: 10%;
}

.caption {
  flex-direction: column;
  justify-content: center;
}
/* ... */

